--- a/css/reset.scss
+++ b/css/reset.scss
@@ -8,6 +8,7 @@
     border: 0;
     font-size: 100%;
     font: inherit;
+    font-family: $textDefault;
     vertical-align: baseline;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
