--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,1 +1,10 @@
 $coloredBg: rgb(189, 93, 56); 
+
+$textDefault: #343a40;
+$textPrimary: rgb(189, 93, 56);
+$textSecondary: #6c757d;
+
+
+$link: rgba(255, 255, 255, 0.55);
+$linkHover: rgba(255, 255, 255, 0.75);
+$linkActive: rgba(255, 255, 255, 1);
