--- a/css/variables.scss
+++ b/css/variables.scss
@@ -1,9 +1,8 @@
 $coloredBg: rgb(189, 93, 56); 
 
-$textDefault: #343a40;
+$textDefault: #6c757d;
 $textPrimary: rgb(189, 93, 56);
-$textSecondary: #6c757d;
-
+$textSecondary: #343a40;
 
 $link: rgba(255, 255, 255, 0.55);
 $linkHover: rgba(255, 255, 255, 0.75);
