--- a/css/main.css
+++ b/css/main.css
@@ -1,15 +1,67 @@
 @import url("https://fonts.googleapis.com/css2?family=Saira+Extra+Condensed:wght@100;200;300;400;500;600;700;800;900&display=swap");
-*, *:before, *:after {
+*,
+*:before,
+*:after {
   box-sizing: border-box;
 }
 
-html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, code, em, img, small, strike, strong, sub, sup, tt, b, u, i, ol, ul, li, fieldset, form, label, table, caption, tbody, tfoot, thead, tr, th, td, main, canvas, embed, footer, header, nav, section, video {
+html,
+body,
+div,
+span,
+object,
+iframe,
+figure,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+blockquote,
+pre,
+a,
+code,
+em,
+img,
+small,
+strike,
+strong,
+sub,
+sup,
+tt,
+b,
+u,
+i,
+ol,
+ul,
+li,
+fieldset,
+form,
+label,
+table,
+caption,
+tbody,
+tfoot,
+thead,
+tr,
+th,
+td,
+main,
+canvas,
+embed,
+footer,
+header,
+nav,
+section,
+video {
   margin: 0;
   padding: 0;
   border: 0;
   font-size: 100%;
   font: inherit;
-  font-family: #343a40;
+  font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
   vertical-align: baseline;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -18,7 +70,11 @@ html, body, div, span, object, iframe, figure, h1, h2, h3, h4, h5, h6, p, blockq
           text-size-adjust: none;
 }
 
-footer, header, nav, section, main {
+footer,
+header,
+nav,
+section,
+main {
   display: block;
 }
 
@@ -26,15 +82,20 @@ body {
   line-height: 1;
 }
 
-ol, ul {
+ol,
+ul {
   list-style: none;
 }
 
-blockquote, q {
+blockquote,
+q {
   quotes: none;
 }
 
-blockquote:before, blockquote:after, q:before, q:after {
+blockquote:before,
+blockquote:after,
+q:before,
+q:after {
   content: "";
   content: none;
 }
@@ -49,6 +110,17 @@ input {
   border-radius: 0;
 }
 
+button {
+  margin: 0;
+  padding: 0;
+  border: none;
+  background: none;
+  font: inherit;
+  color: inherit;
+  cursor: pointer;
+  outline: none;
+}
+
 a {
   color: inherit;
   text-decoration: inherit;
@@ -57,11 +129,7 @@ a {
 
 html {
   scroll-behavior: smooth;
-  font-family: "Saira Extra Condensed", sans-serif;
-}
-
-* {
-  color: #343a40;
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 body {
@@ -69,11 +137,23 @@ body {
   min-height: 100vh;
   min-width: 100vw;
   position: relative;
+  color: #6c757d;
+  font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
 }
 body h1,
 body h2,
 body h3 {
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  color: #343a40;
   text-transform: uppercase;
+}
+body h1 > *,
+body h2 > *,
+body h3 > * {
+  font-size: inherit;
+  font-weight: inherit;
+  font-family: inherit;
+  text-transform: inherit;
 }
 body h1,
 body .h1 {
@@ -97,15 +177,17 @@ body p {
   line-height: 1.5rem;
 }
 body .subheading {
+  font-family: "Saira Extra Condensed", -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   text-transform: uppercase;
-  font-weight: 500;
+  font-weight: 600;
   font-size: 1.5rem;
-  color: #6c757d;
+  line-height: 1.5;
   margin-bottom: 1rem;
 }
 body .subheading * {
   text-transform: inherit;
   font-weight: inherit;
+  font-family: inherit;
   font-size: inherit;
 }
 body aside {
@@ -125,6 +207,21 @@ body aside nav {
   display: flex;
   flex-direction: column;
 }
+body aside nav .navbar-toggler {
+  display: none;
+  padding: 0.25rem 0.75rem;
+  font-size: 1.25rem;
+  line-height: 1;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.1);
+  border-radius: 0.375rem;
+  transition: box-shadow 0.15s ease-in-out;
+  width: -moz-fit-content;
+  width: fit-content;
+}
+body aside nav .navbar-toggler img {
+  width: 30px;
+}
 body aside nav ul {
   margin-bottom: auto;
 }
@@ -143,19 +240,29 @@ body aside nav a {
   color: rgba(255, 255, 255, 0.55);
 }
 body aside nav a#profile {
+  display: inline-flex;
+  width: -moz-fit-content;
+  width: fit-content;
+  font-family: Muli, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji;
+  color: white;
+  font-size: 20px;
+  font-weight: 400;
+  margin: auto auto 0;
+}
+body aside nav a#profile .name {
+  display: none;
+}
+body aside nav a#profile img {
+  padding: 0.5rem;
   display: flex;
   align-items: flex-start;
   justify-content: center;
   margin: auto auto 0;
-  padding: 0.5rem;
-  width: 160px;
-  height: 160px;
-}
-body aside nav a#profile img {
   border: 0.5rem solid rgba(255, 255, 255, 0.2);
   overflow: hidden;
   border-radius: 99999px;
-  height: auto;
+  width: 160px;
+  height: 160px;
   width: 1000%;
 }
 body aside nav a.active {
@@ -169,12 +276,23 @@ body main {
   padding-left: 272px;
 }
 body main section {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
   border-bottom: 1px solid;
   min-height: 100vh;
   padding: 5rem 3rem;
 }
+body main section .content {
+  display: flex;
+  flex-direction: column;
+}
 body main section:last-child {
   border-bottom: 0px;
+}
+body main section#about .lead {
+  font-size: 1.15rem;
+  font-weight: 400;
 }
 body main section#experience ul.list li, body main section#education ul.list li, body main section#skills ul.list li {
   display: flex;
@@ -189,8 +307,35 @@ body main section#experience ul.list li .right, body main section#education ul.l
 body main section#experience ul.list li:last-child, body main section#education ul.list li:last-child, body main section#skills ul.list li:last-child {
   margin-bottom: 0;
 }
+body main section#experience ul.list-inline, body main section#education ul.list-inline, body main section#skills ul.list-inline {
+  height: 4.5rem;
+}
 body main section#experience ul.list-inline li, body main section#education ul.list-inline li, body main section#skills ul.list-inline li {
   display: inline-block;
+}
+body main section ul.withUl {
+  display: flex;
+  flex-direction: column;
+}
+body main section ul.withUl li {
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: flex-start;
+  padding-left: 2rem;
+}
+body main section ul.withUl li .icon {
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: inline-flex;
+  width: 32px;
+  height: 24px;
+}
+body main section ul.withUl li .icon img {
+  display: inline-flex;
+  margin: auto;
+  width: 16px;
 }
 body main .social-icons .social-icon {
   display: inline-flex;
@@ -215,4 +360,85 @@ body main .social-icons .social-icon svg * {
 }
 body .text-primary {
   color: rgb(189, 93, 56);
+}
+@media only screen and (max-width: 992px) {
+  body {
+    flex-direction: column;
+  }
+  body h1 {
+    font-size: calc(1.725rem + 5.7vw);
+  }
+  body h2 {
+    font-size: calc(1.475rem + 2.7vw);
+  }
+  body h2 {
+    font-size: calc(1.325rem + 0.9vw);
+  }
+  body aside {
+    width: 100%;
+    height: -moz-fit-content;
+    height: fit-content;
+  }
+  body aside nav {
+    position: relative;
+    flex-direction: unset;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 100%;
+    padding: 0.5rem 1rem;
+    transition: 1s all ease;
+  }
+  body aside nav a#profile {
+    margin: unset;
+    padding: 0;
+  }
+  body aside nav a#profile .name {
+    display: inline-flex;
+    align-items: center;
+  }
+  body aside nav a#profile img {
+    display: none;
+  }
+  body aside nav .navbar-toggler {
+    display: inline-flex;
+    height: 40px;
+  }
+  body aside nav ul {
+    height: 0;
+    overflow: hidden;
+    width: 100%;
+    background: rgb(189, 93, 56);
+  }
+  body aside nav ul.show {
+    height: unset;
+    overflow: visible;
+  }
+  body aside nav ul a {
+    padding: 0.5rem 0 !important;
+    text-align: start;
+  }
+  body main {
+    min-width: 100%;
+    padding-left: 0;
+  }
+  body main section {
+    padding-left: 1rem;
+    padding-right: 1rem;
+  }
+  body main section ul.list li {
+    display: flex;
+    flex-direction: column;
+  }
+}
+
+.mb-5 {
+  margin-bottom: 3rem !important;
+}
+
+.mb-3 {
+  margin-bottom: 1rem !important;
+}
+
+.underline {
+  text-decoration: underline;
 }/*# sourceMappingURL=main.css.map */
